# movici-simulation-core

./: .bumpversion.app  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  COVERAGE.md  LICENSE  LICENSE.txt  Makefile  PERFORMANCE.md  README.md  README.rst  SQLITE_STORAGE_README.rst  TODO.md  VERSION  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-models.txt  requirements.txt  setup.py  sonar-project.properties
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/install-movici-core/: action.yml
.github/actions/install-movici-simulation-core/: action.yml
.github/actions/install-plantuml/: action.yml
.github/actions/install-spatialite/: action.yml
.github/actions/setup-python/: action.yml
.github/install-spatialite/: action.yml
.github/workflows/: deploy.yml  main.yml  pull_request.yml  python-package-conda.yml  test.yml
docs/: Makefile
docs/source/: conf.py  glossary.rst  index.rst
docs/source/_templates/: package.rst_t  toc.rst_t
docs/source/creating_models/: attributes.rst  geospatial_queries.rst  index.rst  tracked_model.rst
docs/source/getting_started/: first_steps.rst  index.rst  installation.rst  introduction.rst
docs/source/in_depth/: communication.rst  data_masks.rst  index.rst  simulations.rst
docs/source/include/: code.rst  glossary.rst  unicode_checkmark.rst
docs/source/models/: area_aggregation.rst  attributes.rst  corridor.rst  csv_player.rst  data_collector.rst  drinking_water_model.rst  drinking_water_model_research.md  evacuation_point_resolution.rst  generalized_journey_time.rst  geospatial_queries.rst  index.rst  netcdf_player.rst  operational_status.rst  opportunities.rst  overlap_status.rst  power_grid_model.rst  rules_model.rst  shortest_path.rst  tape_player.rst  time_window_status.rst  traffic_assignment.rst  traffic_assignment_calculation.rst  traffic_demand_calculation.rst  traffic_kpi.rst  udf.rst  udf_model.rst  unit_conversions.rst  urban_drainage_model.rst
docs/source/movici_way/: common_attributes.rst  data_format.rst  design_overview.rst  geometries.rst  index.rst  simulation_life_cycle.rst
docs/source/reference/: modules.rst  movici_data_core.api.rst  movici_data_core.database.repository.rst  movici_data_core.database.rst  movici_data_core.rst  (+50 more)
examples/: custom_datasource.py  interpolating_tapefile.py  result_dataset.py  rules_model.py  run_simulation.py  signal_strength.py  simple_water_network.inp  sqlite_storage_example.py  squares.py  water_network_example.py
examples/power_grid/: power_grid_example.py
movici_simulation_core/: __init__.py  attributes.py  csr.py  exceptions.py  messages.py  settings.py  simulation.py  types.py  validate.py
movici_simulation_core/ae_wrapper/: __init__.py  collections.py  id_generator.py  patches.py  point_generator.py  project.py
movici_simulation_core/base_model/: base.py  config_helpers.py  optional.py
movici_simulation_core/base_models/: __init__.py  common.py  moment.py  simple_model.py  tracked_base_model.py  tracked_model.py
movici_simulation_core/core/: __init__.py  arrays.py  attribute.py  attribute_spec.py  attributes.py  data_format.py  data_type.py  dataset_path.py  entity_group.py  index.py  moment.py  numba_extensions.py  plugins.py  schema.py  serialization.py  settings.py  simulation.py  state.py  types.py  utils.py
movici_simulation_core/data_tracker/: arrays.py  attribute.py  csr_helpers.py  data_format.py  entity_group.py  index.py  numba_extensions.py  optional.py  property.py  serialization.py  state.py  types.py  unicode_helpers.py
movici_simulation_core/json_schemas/: __init__.py  dataset_creator.json
movici_simulation_core/legacy_base_model/: base.py  config_helpers.py
movici_simulation_core/model_connector/: __init__.py  connector.py  design.txt  init_data.py
movici_simulation_core/models/: __init__.py
movici_simulation_core/networking/: client.py  messages.py  stream.py
movici_simulation_core/postprocessing/: __init__.py  results.py  sqlite_results.py
movici_simulation_core/preprocessing/: __init__.py  data_sources.py  dataset_creator.py  tapefile.py
movici_simulation_core/services/: __init__.py
movici_simulation_core/simulation/: __init__.py  common.py  distributed.py  synchronous.py
movici_simulation_core/storage/: __init__.py  sqlite_schema.py  sqlite_strategy.py
movici_simulation_core/testing/: helpers.py  model_schema.py  model_tester.py  road_network.py
movici_simulation_core/utils/: __init__.py  attribute_loader.py  data_mask.py  lifecycle.py  logging.py  moment.py  path.py  plugin.py  settings.py  strategies.py  unicode.py  validate.py
research/: README.md  requirements.txt  temp.inp  wntr_research.ipynb
research/.ipynb_checkpoints/: wntr_research-checkpoint.ipynb
scripts/: coverage_summary.py
src/movici/: __init__.py
tests/: conftest.py  test_csr.py  test_examples.py
tests/ae_wrapper/: test_id_generation.py  test_point_generator.py  test_project.py
tests/base_model/: test_base.py  test_config_helpers.py
tests/base_models/: conftest.py  test_config_helpers.py  test_moment.py  test_simple_model.py  test_tracked_model.py
tests/core/: test_data_format.py  test_schema.py
tests/data_tracker/: test_arrays.py  test_attribute.py  test_csr_helpers.py  test_entity_group.py  test_index.py  test_property.py  test_state.py
tests/model_connector/: test_connector.py
tests/models/: conftest.py  test_tape_player.py
tests/networking/: test_messages.py  test_stream.py
tests/postprocessing/: test_results.py  test_sqlite_results.py
tests/preprocessing/: test_dataset_creator.py  test_inp_source.py  test_resolve_source.py  test_tapefile.py
tests/simulation/: test_simulation.py  test_synchronous.py
tests/storage/: test_sqlite_storage.py
tests/testing/: test_model_schema.py  test_model_tester.py  test_road_network.py
tests/utils/: test_attribute_loader.py  test_data_mask.py  test_lifecycle.py  test_validate.py
(+250 files in other folders)
