[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "movici-simulation-core"
version = "2.12.0"
description = "Core package for running Movici geospatial temporal simulations"
readme = "README.rst"
requires-python = ">=3.10,<3.14"
license = { text = "Movici Public License" }
authors = [{ name = "NGinfra Movici", email = "movici@nginfra.nl" }]
maintainers = [{ name = "NGinfra - Movici", email = "movici@nginfra.nl" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: Free for non-commercial use",
  "License :: Other/Proprietary License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
  "numpy",
  "numba>=0.55",
  "python-dateutil>=2.8.0",
  "pandas>=1.2.0",
  "pydantic>=1.8.2",
  "pydantic_settings",
  "orjson>=3",
  "pyzmq",
  "msgpack",
  "click",
  "geopandas",
  "jsonschema",
  "pyproj",
  "netCDF4",
  "Fiona>=1.9",
]

[project.optional-dependencies]
models = [
  "shapely>=1.7.1",
  "aequilibrae>=1",
  "pyproj>=3.0.1",
  "movici-geo-query>=1.1.1",
  "scipy",
]
sqlite = ["sqlalchemy>=1.4,<3.0"]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "bump2version",
  "taplo",
  "ruff",
  "sqlalchemy>=1.4,<3.0",
]
docs = ["sphinx", "furo", "sphinxcontrib-mermaid", "sphinxcontrib-plantuml"]
all = [
  "shapely>=1.7.1",
  "aequilibrae>=1",
  "pyproj>=3.0.1",
  "movici-geo-query>=1.1.1",
  "sqlalchemy>=1.4,<3.0",
  "scipy",
  "pytest",
  "pytest-cov",
  "mypy",
  "bump2version",
  "taplo",
  "ruff",
  "sphinx",
  "furo",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-plantuml",
]

[project.scripts]
movici-simulation = "movici_simulation_core.cli:main"

[project.entry-points."movici.plugins"]
orchestrator = "movici_simulation_core.services.orchestrator.service:Orchestrator"
update_data_service = "movici_simulation_core.services.update_data.service:UpdateDataService"
init_data_service = "movici_simulation_core.services.init_data.service:InitDataService"
global_attributes = "movici_simulation_core.attributes:GlobalAttributes"
common_attributes = "movici_simulation_core.models.common.attributes:CommonAttributes"
area_aggregation = "movici_simulation_core.models.area_aggregation.model:Model"
corridor = "movici_simulation_core.models.corridor.model:Model"
csv_player = "movici_simulation_core.models.csv_player.csv_player:CSVPlayer"
data_collector = "movici_simulation_core.models.data_collector.data_collector:DataCollector"
evacuation_point_resolution = "movici_simulation_core.models.evacuation_point_resolution:EvacuatonPointResolution"
generalized_journey_time = "movici_simulation_core.models.generalized_journey_time.gjt_model:GJTModel"
netcdf_player = "movici_simulation_core.models.netcdf_player.netcdf_player:NetCDFPlayer"
operational_status = "movici_simulation_core.models:OperationalStatusModel"
opportunities = "movici_simulation_core.models.opportunities.model:Model"
overlap_status = "movici_simulation_core.models.overlap_status.model:Model"
shortest_path = "movici_simulation_core.models.shortest_path.model:ShortestPathModel"
tape_player = "movici_simulation_core.models.tape_player.model:Model"
time_window_status = "movici_simulation_core.models.time_window_status.model:Model"
traffic_assignment_calculation = "movici_simulation_core.models.traffic_assignment_calculation.model:Model"
traffic_demand_calculation = "movici_simulation_core.models.traffic_demand_calculation.model:TrafficDemandCalculation"
traffic_kpi = "movici_simulation_core.models.traffic_kpi.model:Model"
udf = "movici_simulation_core.models.udf_model.udf_model:UDFModel"
unit_conversions = "movici_simulation_core.models.unit_conversions.model:Model"

[project.urls]
Homepage = "https://github.com/nginfra/movici-simulation-core"
Documentation = "https://docs.movici.nl/en/latest/index.html"
Repository = "https://github.com/nginfra/movici-simulation-core"
Issues = "https://github.com/nginfra/movici-simulation-core/issues"

[tool.setuptools]
include-package-data = true
script-files = ["bin/rename_attributes.py"]

[tool.setuptools.packages.find]
include = ["movici_simulation_core*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
# Ideally we'd have the following rules enabled. However, that is currently not feasible,
# so some of them are still disabled, we should work on enabling and fixing them:

select = [
  # "ARG", # check for unused arguments -- there are too many false positives with overriding methods -> maybe typing.override will help?
  "B", # (bugbear) catches certain common programming bugs
  # "C4", # comprehension linting
  "E", # common codestyle errors
  "F", # pyflakes rules
  # "FA", # check for correct usage of from __future__ import annotations
  "FURB", # refactor opportunities
  "I",    # isort
  "LOG",  # check for logging best practices and bugs
  # "N", # pep8 naming
  "NPY", # numpy checks
  "PD",  # pandas checks
  "PLE", # pylint errors
  # "PLR", # pylint refactor opportunities
  # "PLW", # pyling warnings
  # "PT", # pytest style checks
  # "PTH", # prefer pathlib over os.path
  # "RSE", # return statement rules
  # "RUF", # ruff specific rules
  "S", # security (bandit) checks
  # "SIM", # suggest code simplifications
  "T10", # check for breakpoint() statements
  "T20", # check for print statements
  "W",   # common codestyle warnings
  "YTT", # check sys.version errors (not used extensively but nice to have)
]
ignore = [
  "B027", # empty method in abstract base class
  "B028", # warnings explicit `stack_level` kwarg
  "B905", # zip explicit `strict` kwarg
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"examples/*" = ["S101", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["movici_simulation_core"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--tb=short", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
filterwarnings = ["ignore:.*ABCs from 'collections'.*:DeprecationWarning"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
show_error_context = true

[[tool.mypy.overrides]]
module = ['numpy.*', 'numba.*']
ignore_missing_imports = true
