[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "movici"
dynamic = ["version"]
requires-python = ">=3.10,<3.14"
dependencies = ["movici-simulation-core"]

[dependency-groups]
dev = [
  "movici-simulation-core[all]",
  "pytest",
  "pytest-cov",
  "mypy",
  "taplo",
  "ruff",
]
docs = [
  "movici-simulation-core[models]",
  "sphinx",
  "furo",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-plantuml",
]

[project.urls]
Homepage = "https://github.com/nginfra/movici-simulation-core"
Documentation = "https://docs.movici.nl/en/latest/index.html"
Repository = "https://github.com/nginfra/movici-simulation-core"
Issues = "https://github.com/nginfra/movici-simulation-core/issues"

[tool.uv.sources]
movici-simulation-core = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
# Ideally we'd have the following rules enabled. However, that is currently not feasible,
# so some of them are still disabled, we should work on enabling and fixing them:

select = [
  # "ARG", # check for unused arguments -- there are too many false positives with overriding methods -> maybe typing.override will help?
  "B", # (bugbear) catches certain common programming bugs
  # "C4", # comprehension linting
  "E", # common codestyle errors
  "F", # pyflakes rules
  # "FA", # check for correct usage of from __future__ import annotations
  "FURB", # refactor opportunities
  "I",    # isort
  "LOG",  # check for logging best practices and bugs
  # "N", # pep8 naming
  "NPY", # numpy checks
  "PD",  # pandas checks
  "PLE", # pylint errors
  # "PLR", # pylint refactor opportunities
  # "PLW", # pyling warnings
  # "PT", # pytest style checks
  # "PTH", # prefer pathlib over os.path
  # "RSE", # return statement rules
  # "RUF", # ruff specific rules
  "S", # security (bandit) checks
  # "SIM", # suggest code simplifications
  "T10", # check for breakpoint() statements
  "T20", # check for print statements
  "W",   # common codestyle warnings
  "YTT", # check sys.version errors (not used extensively but nice to have)
]
ignore = [
  "B027", # empty method in abstract base class
  "B028", # warnings explicit `stack_level` kwarg
  "B905", # zip explicit `strict` kwarg
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"packages/simulation-core/tests/*" = ["S"]
"packages/simulation-core/examples/*" = ["S101", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["movici_simulation_core"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--tb=short", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
filterwarnings = ["ignore:.*ABCs from 'collections'.*:DeprecationWarning"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
show_error_context = true

[[tool.mypy.overrides]]
module = ['numpy.*', 'numba.*']
ignore_missing_imports = true
